# a2a-databricks-dev-kit

./: .env.example  .gitignore  Makefile  README.md  app.yaml  databricks.yml  databricks_template_schema.json  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI_REGISTRATION.md  INSTALL_BUNDLE.md  INSTALL_UI.md  LOCAL_DEV.md  QUICKSTART.md  README.md  TESTING.md  TROUBLESHOOTING.md
notebooks/: register_in_gemini.py
resources/: app.yml
src/a2a_databricks/: __init__.py  auth.py  card.py  cli.py  config.py  llm.py  server.py  tracing.py
src/app/: __init__.py  agent.py  main.py
template/{{.project_name}}/: .env.example  .gitignore  Makefile  README.md.tmpl  app.yaml.tmpl  databricks.yml.tmpl  pyproject.toml.tmpl  requirements.txt
template/{{.project_name}}/resources/: app.yml.tmpl
template/{{.project_name}}/src/app/: agent.py  main.py
tests/: conftest.py  test_auth.py  test_card.py  test_config.py  test_server.py
tests/fixtures/: sample_task.json
