[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-databricks-dev-kit"
version = "0.1.0"
description = "Dev kit for building A2A-protocol agents that run on Databricks and register in Google Gemini Enterprise"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Nate Fleming", email = "nate.fleming@databricks.com" }]
keywords = ["databricks", "a2a", "agent", "gemini", "mlflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "a2a-sdk>=1.0,<1.1",
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.40",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "httpx>=0.27,<1",
    "sse-starlette>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "databricks-sdk>=0.32,<1",
    "mlflow[databricks]>=2.17.0,<3",
    "databricks-langchain>=0.4,<1",
    "langchain-openai>=0.2,<1",
    "loguru>=0.7,<1",
]

[project.optional-dependencies]
gemini = [
    "google-auth>=2.30,<3",
    "google-cloud-discoveryengine>=0.13,<1",
]

[dependency-groups]
dev = [
    "ruff>=0.6,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-timeout>=2.3,<3",
    "pytest-cov>=5,<7",
    "httpx>=0.27,<1",
]

[project.scripts]
a2a-databricks = "a2a_databricks.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_databricks", "src/app"]
sources = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "A"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
timeout = 120
timeout_method = "thread"
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests requiring a live Databricks workspace",
    "slow: tests that take more than a few seconds",
]
asyncio_mode = "auto"
testpaths = ["tests"]
